# clickery-hexagon

./: .gitignore  CHANGELOG.md  LICENSE  LOG.md  README.md  TODO.md  index.html  itchtask.sh  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts
price-tweaker/: README.md
price-tweaker/www/: index.html
price-tweaking/src/: loader.js  main.js
price-tweaking/src/scenes/: gamescene.js  upgradescene.js  utils.js
price-tweaking/www/: index.html
public/: game.js  game.js.map  index.html
source/: console.ts  gamestate.js  gamestate.ts  loader.js  loader.ts  main.js  main.ts  newgrounds.ts  sound.js  sound.ts  tauriUtils.ts
source/game/: achievements.ts  additives.ts  ascension.ts  combo-utils.ts  gamescene.ts  hexagon.ts  hovers.ts  powerups.ts  uicounters.ts  unlockables.ts  utils.ts
source/game/ascension/: ascension.ts  cards.ts  dialogues.ts  mage.ts
source/game/plugins/: drag.ts  (+6 more)
source/hovers/: insideWindowHover.ts  outsideWindowHover.ts
source/plugins/: confetti.js  drag.js  drag.ts  dummyShadow.js  fill.js  positionSetter.js  positionSetter.ts  shockwave.js  trail.js  trail.ts  wave.ts
source/scenes/: ascendscene.ts  focuscene.js  focuscene.ts  introScene.js
src/: GameState.js  env.json  gamestate.ts  introScene.js  loader.js  loader.ts  main.js  main.ts  sound.js  sound.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/game/: additives.ts  combo-utils.ts  gamescene.ts  hexagon.ts  utils.ts
src/plugins/: drag.js  wave.ts
src/scenes/: gamescene.js
www/: index.html
(+101 files in other folders)
