[package]
name = "Clickery-Hexagon"
version = "0.1.0"
description = 'A "Simple" game of clicking hexagons'
authors = ["you"]
license = ""
repository = ""
default-run = "Clickery-Hexagon"
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.7", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.8", features = [] }
